kubernetes/logdb.k8s.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: log-db
  namespace: default
spec:
  serviceName: "log-db"
  replicas: 1
  selector:
    matchLabels:
      app: log-db
  template:
    metadata:
      labels:
        app: log-db
    spec:
      containers:
      - name: log-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5435
        volumeMounts:
        - name: log-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: log-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
