kubernetes/apigateway.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 8080         # External clients access the service on port 80
      nodePort: 30001   # Specific NodePort for external access
  type: NodePort         # Exposes the service via the NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      serviceAccountName: apigateway-sa   # Use the  defined ServiceAccount
      containers:
        - name: apigateway
          image: sys-chatbot-exam/apigateway
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
