kubernetes/authdb.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-db  # The name of the service that will be used for DNS resolution
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: auth-db  # This should match the label of the database StatefulSet


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: default
spec:
  serviceName: "auth-db"
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: auth-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: auth-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
