kubernetes/authenticationservice.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: authenticationservice
  labels:
    app: authenticationservice
spec:
  selector:
    app: authenticationservice
  ports:
    - protocol: TCP
      port: 8080         # Service is exposed on port 8080
  type: ClusterIP         # Internal access only; use LoadBalancer for external access

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationservice
  labels:
    app: authenticationservice
spec:
  replicas: 3  # Ensures high availability with 3 instances
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice
    spec:
      serviceAccountName: authenticationservice-sa # Use the defined ServiceAccount
      containers:
        - name: authenticationservice
          image:  sys-chatbot-exam/authenticationservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authenticationservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: authenticationservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic from the API Gateway
            matchLabels:
              app: apigateway
