kubernetes/chatservice.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: chatservice
  labels:
    app: chatservice
spec:
  selector:
    app: chatservice
  ports:
    - protocol: TCP
      port: 8080         # Service is exposed on port 8080
  type: ClusterIP         # Internal access only; use LoadBalancer for external access

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatservice
  labels:
    app: chatservice
spec:
  replicas: 3  # Ensures high availability with 3 instances
  selector:
    matchLabels:
      app: chatservice
  template:
    metadata:
      labels:
        app: chatservice
    spec:
      serviceAccountName: chatservice-sa # Use the defined ServiceAccount
      containers:
        - name: chatservice
          image: sys-chatbot-exam/chatservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chatservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: chatservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic from the API Gateway
            matchLabels:
              app: apigateway
        - podSelector: # Allow traffic from RabbitMQ for message handling
            matchLabels:
              app: rabbitmq
