kubernetes/grpcservice.yml
---

apiVersion: v1
kind: Service
metadata:
  name: grpcservice
  labels:
    app: grpcservice
spec:
  selector:
    app: grpcservice
  ports:
    - protocol: TCP
      port: 50051         # Service is exposed on port 8080
      targetPort: 50051   # Forwards traffic to container's port 8080
  type: ClusterIP         # Internal access only

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcservice
  labels:
    app: grpcservice
spec:
  replicas: 3  # Ensures high availability with 3 instances
  selector:
    matchLabels:
      app: grpcservice
  template:
    metadata:
      labels:
        app: grpcservice
    spec:
      serviceAccountName: grpcservice-sa  # Use the defined ServiceAccount
      containers:
        - name: grpcservice
          image: sys-chatbot-exam/grpcservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grpcservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: grpcservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic only from API Gateway
            matchLabels:
              app: apigateway
        - podSelector: # Allow traffic from TweetPostingService
            matchLabels:
              app: tweetpostingservice
        - podSelector: # Allow traffic from RabbitMQ
            matchLabels:
              app: rabbitmq
