kubernetes/logservice.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: logservice
  namespace: default
  labels:
    app: logservice
spec:
  selector:
    app: logservice
  ports:
    - protocol: TCP
      port: 8080         # Service is exposed on port 8080
      targetPort: 8080   # Forwards traffic to container's port 8080
  type: ClusterIP         # Internal access only; use LoadBalancer for external access

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: logservice
  namespace: default
  labels:
    app: logservice
spec:
  replicas: 3  # Ensures high availability with 3 instances of the application
  selector:
    matchLabels:
      app: logservice
  template:
    metadata:
      labels:
        app: logservice
    spec:
      serviceAccountName: logservice-sa # Use the defined ServiceAccount
      containers:
        - name: logservice
          image: sys-chatbot-exam/logservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: logservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic only from API Gateway
            matchLabels:
              app: apigateway
        - podSelector: # Allow traffic from InteractionService
            matchLabels:
              app: chatservice
        - podSelector: # Allow traffic from RabbitMQ
            matchLabels:
              app: rabbitmq
